2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.mdp: New project model changes.

2008-05-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlSpecialTagState.cs: Fix opening of
	  CDATA tags.

2008-04-30  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagNameState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Make sure more
	  states have closing positions.

2008-04-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/CDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlSpecialTagState.cs,
	  MonoDevelop.Xml.StateEngine/State.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Change XML state
	  engine API to allow cloning a single node (as an alternative to the
	  whole stack).
	* MonoDevelop.Xml.StateEngine/XmlTagNameState.cs: Track API and fix
	  name closing logic.

2008-04-18  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlSpecialTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs: Add
	  support for processing instructions.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.

2008-04-18  Michael Hutchinson <mhutchinson@novell.com> 
